Post v22.12.0
-------------

OVN v22.12.0 - xx xxx xxxx
--------------------------
  - Add load balancer "affinity_timeout" option to configure load balancing
    of traffic from a particular client to the same backend for a given
    period of time.
  - ovn-northd: Add configuration knobs to enable drop sampling using OVS's
    per-flow IPFIX sampling.

OVN v22.09.0 - 16 Sep 2022
--------------------------
  - ovn-controller: Add configuration knob, through OVS external-id
    "ovn-encap-df_default" to enable or disable tunnel DF flag.
  - Add option "localnet_learn_fdb" to LSP that will allow localnet
    ports to learn MAC addresses and store them in FDB table.
  - northd: introduce the capability to automatically deploy a load-balancer
    on each logical-switch connected to a logical router where the
    load-balancer has been installed by the CMS. In order to enable the
    feature the CMS has to set install_ls_lb_from_router to true in option
    column of NB_Global table.
  - Added nb_global IPsec options ipsec_encapsulation=true (libreswan)
    and ipsec_forceencaps=true (strongswan) to unconditionally enforce
    NAT-T UDP encapsulation. Requires OVS support for IPsec custom tunnel
    options (which is available in OVS 3.0).
  - Removed possibility of disabling logical datapath groups.
  - Removed the copying of SB's Chassis other_config into external_ids.
  - Added MAC binding aging mechanism, that is disabled by default.
    It can be enabled per logical router with option
    "mac_binding_age_threshold".
  - If it is needed to create Load Balancer within LR with VIP, which matches
    any of LR's LRP IP, there is no need to create SNAT entry.  Now such
    traffic destined to LRP IP is not dropped.
  - Bump python version required for building OVN to 3.6.

OVN v22.06.0 - 03 Jun 2022
--------------------------
  - Support IGMP and MLD snooping on transit logical switches that connect
    different OVN Interconnection availability zones.