@@ -8,6 +8,8 @@ OVN v22.12.0 - xx xxx xxxx
     period of time.
   - ovn-northd: Add configuration knobs to enable drop sampling using OVS's
     per-flow IPFIX sampling.
+  - ovn-controller: Experimental support for co-hosting multiple controller
+    instances on the same host.
 
 OVN v22.09.0 - 16 Sep 2022
 --------------------------
